# Makefile for libstatgrab/examples
# http://www.i-scream.org/libstatgrab/
# $Id: Makefile.am,v 1.13 2010/10/03 18:35:57 tdb Exp $

EXTRA_DIST = run_tests.pm mk_run_tests.pl run_tests.t.in

AM_CPPFLAGS = -I$(top_srcdir) -I$(top_builddir)\
	      -I$(top_srcdir)/src -I$(top_builddir)/src\
	       @CLIBFLAGS@
